# Decentralized-Pocket-Memory

./: .gitignore  README.md  blockchain_key.json  requirements.txt  streamlit_app.py
app/api/: main.py  models.py
app/core/: fallback_index.py  index_client.py
app/ml/: chunking.py  distill.py  embeddings.py
app/ml/adapters/: base.py  github_adapter.py  pdf_adapter.py  reddit_adapter.py  stub_adapters.py  url_adapter.py
app/services/: blockchain.py  engine.py  source_registry.py  telemetry.py
benchmarks/: DEMO_WORKFLOW.md  query_set.json  run_benchmark.py  run_mode_comparison.py
cpp/: CMakeLists.txt
cpp/src/: bindings.cpp  vector_index.cpp  vector_index.hpp
